seperated css into single file(base.html), added error message in todo.py, added login_fail.html file

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,112 @@ $def with (page)
 
 <html>
 <head>
-    <title>Todo list</title>
+<META Http-Equiv="Cache-Control" Content="no-cache"/>
+<META Http-Equiv="Pragma" Content="no-cache"/>
+<META Http-Equiv="Expires" Content="0"/>
+<title>Todo list</title>
+<style type="text/css">
+          body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
+      .container{
+       background-image:url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSztVDSDw3_qkqc6o2MDeSxcduJsn66dUawkkvm9-NbhNA3Dey5Rg");
+        background-repeat: no-repeat;
+        background-size: 117% 110%;
+        background-position: center center;
+        max-width: 300px;
+        padding: 19px 29px 29px;
+        width:300px;
+        margin: 0 auto;
+        text-align:center;
+        background-color: #fff;
+	border: 1px solid #e5e5e5;
+        -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+                border-radius: 5px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+       }
+      .heading 
+      {
+        margin-bottom: 10px;
+      }
+  
+      .errormessage
+      {
+        margin-bottom:10px;
+        color:red;
+      }
 
+      .form-signin {
+        background-image:url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSztVDSDw3_qkqc6o2MDeSxcduJsn66dUawkkvm9-NbhNA3Dey5Rg");
+        background-repeat: no-repeat;
+        background-size: 117% 110%;
+        background-position: center center;
+        max-width: 300px;
+        padding: 19px 29px 29px;
+        width:300px;
+        margin: 0 auto;
+        text-align:center;
+        background-color: #fff;
+	border: 1px solid #e5e5e5;
+        -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+                border-radius: 5px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+       
+      }
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      .form-signin input[type="text"],
+      .form-signin input[type="password"] {
+        font-size: 16px;
+        height: auto;
+        margin-bottom: 15px;
+        padding: 7px 9px;
+        width: 250px;
+        float:auto;
+        
+      }
+      .button{
+    -moz-user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857;
+    margin-bottom: 0;
+    padding: 6px 12px;
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap;
+    background-color: #428bca;
+    border-color: #357ebd;
+    color: #fff;
+    float:auto;
+}
+  .deletebutton {
+       background-image: url("https://cdn2.iconfinder.com/data/icons/toolbar-icons/512/Cancel-128.png");
+       height: 25px;
+       width: 25px;
+       background-size: cover;
+       border: 50px;
+       margin-left: 100px;
+       float:right;
+     }
+</style>
 </head>
 <body>
-
 $:page
-
 </body>
 </html>
