--- a/templates/signup_success.html
+++ b/templates/signup_success.html
@@ -7,7 +7,7 @@ $def with ()
 <div class="container">
       <h2 class="heading">To Do List</h2>
       <br>
-      <img src="http://www.safevoodoospells.com/images/thumbsup.png" style="height:100px; width:100px; position:fixed;"></img>
+      <img src="http://www.safevoodoospells.com/images/thumbsup.png" style="height:100px; width:100px;"></img>
       <br>
       <h3 class="heading"> SignUp Successfull!!! </h3>
       <br>
