--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,13 @@ $def with (page)
       {
         margin-bottom: 10px;
       }
-  
+      .error
+      {
+         float:right; 
+         font-size:12px; 
+         color:red; 
+         margin-top:-10px;"
+      }
       .errormessage
       {
         margin-bottom:10px;
@@ -62,8 +68,7 @@ $def with (page)
                 box-shadow: 0 1px 2px rgba(0,0,0,.05);
        
       }
-      .form-signin .form-signin-heading,
-      .form-signin .checkbox {
+      .form-signin .form-signin-heading {
         margin-bottom: 10px;
       }
       .form-signin input[type="text"],
