--- a/templates/login.html
+++ b/templates/login.html
@@ -82,9 +82,9 @@ function chkform()
 <div>
       <form class="form-signin" action="" method="post" align="center">
         <h2 class="form-signin-heading">To Do List</h2>
-        <h3 class="form-signin-heading">Please sign in</h3>
+        <h3 class="form-signin-heading">Please sign in</h3><br>
         <input type="text" class="input-block-level" name="uname" id="uname" placeholder="Username" onBlur="isUsername()"><span id="usr" class="error"></span>
-        <input type="password" class="input-block-level" name="password" id="password" placeholder="Password" onBlur="chkpassword()"><span id="pwd" class="error"></span><br>
+        <input type="password" class="input-block-level" name="password" id="password" placeholder="Password" onBlur="chkpassword()"><span id="pwd" class="error"></span><br><br>
         <button class="button" type="submit" onclick="return chkform()">Sign in</button>
         <h3 class="form-signin-heading">Not Registered yet?</h3>
         <a href="signup">Sign Up</a>
