--- a/templates/login_fail.html
+++ b/templates/login_fail.html
@@ -9,7 +9,7 @@ $def with ()
       <br>
       <img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons-256/blue-metallic-orbs-icons-business/078888-blue-metallic-orb-icon-business-thumbs-down.png" style="height:100px; width:100px"></img>
       <br>
-      <h3 class="heading">You are not registered user.</h3>
+      <h3 class="errormessage">You are not registered user.</h3>
       <br>
       <a href="/signup" class="heading"> Please Signup Here</a>
 </div>
