--- a/templates/base.html
+++ b/templates/base.html
@@ -13,16 +13,16 @@ $def with (page)
         background-color: #f5f5f5;
       }
       .container{
-       background-image:url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSztVDSDw3_qkqc6o2MDeSxcduJsn66dUawkkvm9-NbhNA3Dey5Rg");
+        background-image:url("http://l.rgbimg.com/cache1pO0vi/users/b/ba/ba1969/600/mQcv96O.jpg");
         background-repeat: no-repeat;
-        background-size: 117% 110%;
+        background-size: 120% 120%;
         background-position: center center;
         max-width: 300px;
         padding: 19px 29px 29px;
         width:300px;
         margin: 0 auto;
         text-align:center;
-        background-color: #fff;
+        background-color: transparent;
 	border: 1px solid #e5e5e5;
         -webkit-border-radius: 5px;
            -moz-border-radius: 5px;
@@ -34,31 +34,39 @@ $def with (page)
       .heading 
       {
         margin-bottom: 10px;
+        color:#680000;
       }
+      
+      .success
+      {
+        margin-bottom:10px;
+        color:#009933;
+      }
+
       .error
       {
          float:right; 
          font-size:12px; 
-         color:red; 
+         color:#CC0000; 
          margin-top:-10px;"
       }
       .errormessage
       {
         margin-bottom:10px;
-        color:red;
+        color:#CC0000;
       }
 
       .form-signin {
-        background-image:url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSztVDSDw3_qkqc6o2MDeSxcduJsn66dUawkkvm9-NbhNA3Dey5Rg");
+        background-image:url("http://l.rgbimg.com/cache1pO0vi/users/b/ba/ba1969/600/mQcv96O.jpg");
         background-repeat: no-repeat;
-        background-size: 117% 110%;
+        background-size: 120% 120%;
         background-position: center center;
         max-width: 300px;
         padding: 19px 29px 29px;
         width:300px;
         margin: 0 auto;
         text-align:center;
-        background-color: #fff;
+        background-color: transparent;
 	border: 1px solid #e5e5e5;
         -webkit-border-radius: 5px;
            -moz-border-radius: 5px;
@@ -70,6 +78,7 @@ $def with (page)
       }
       .form-signin .form-signin-heading {
         margin-bottom: 10px;
+        color:#680000;
       }
       .form-signin input[type="text"],
       .form-signin input[type="password"] {
@@ -102,14 +111,20 @@ $def with (page)
     float:auto;
 }
   .deletebutton {
-       background-image: url("https://cdn2.iconfinder.com/data/icons/toolbar-icons/512/Cancel-128.png");
+       background-image: url("https://cdn3.iconfinder.com/data/icons/line/36/cancel-128.png");
        height: 25px;
        width: 25px;
        background-size: cover;
        border: 50px;
        margin-left: 100px;
        float:right;
+       background-color: transparent !important;
      }
+
+input[type=checkbox]:checked + span {
+  font-style: normal;
+  text-decoration: line-through;
+} 
 </style>
 </head>
 <body>
